add method delete and update customer in database . add edit.html

--- a/src/main/webapp/WEB-INF/views/customer/index.html
+++ b/src/main/webapp/WEB-INF/views/customer/index.html
@@ -10,7 +10,11 @@
 
     <a th:href="@{/customer/{id}(id=${people.getId()})}" th:text="${people.getName()}">user</a>
 
+
+
 </div>
+<a href="/customer/new">Create new customer</a>
+
 
 
 
