--- a/src/main/webapp/WEB-INF/views/customer/show.html
+++ b/src/main/webapp/WEB-INF/views/customer/show.html
@@ -12,5 +12,9 @@
 <p th:text="${customer.getCreationDate()}">user</p>
 <p th:text="${customer.getModificationDate()}">user</p>
 
+<a th:href="@{/customer/{id}/edit(id=${customer.getId()})}">edit</a>
+<form th:method="DELETE" th:action="@{/customer/{id}(id=${customer.getId()})}">
+    <input type="submit" value="Delete"/>
+
 </body>
 </html>
