CRUD operation for products, add ProductsMapper,ProductController,productDAO, add HTML files for Product for CRUD in web

--- a/src/main/webapp/WEB-INF/views/customer/show.html
+++ b/src/main/webapp/WEB-INF/views/customer/show.html
@@ -15,6 +15,6 @@
 <a th:href="@{/customer/{id}/edit(id=${customer.getId()})}">edit</a>
 <form th:method="DELETE" th:action="@{/customer/{id}(id=${customer.getId()})}">
     <input type="submit" value="Delete"/>
-
+</form>
 </body>
 </html>
